# vibesort-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: lib.rs
tests/: integration_test.rs
