[package]
name = "vibesort-rs"
version = "0.1.0"
edition = "2024"
authors = ["ZyraX <oscarcoll.930714@gmail.com>"]
license = "MIT"
description = "Sort arrays using Large Language Models (LLMs)"
readme = "README.md"
keywords = ["llm", "sort", "array", "ai", "vibesort"]
repository = "https://github.com/fileng87/vibesort-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
reqwest = { version = "0.12.24", features = ["json"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["rt", "macros", "test-util"] }
wiremock = "0.6.5"
